# reklama-telega

./: .gitignore  README.md  commands.txt  config.example.toml  pyproject.toml  rewrite_auto_join.py
.github/workflows/: release.yml
reklama_telega/: __init__.py  __main__.py  cli.py  client.py  config.py  monitor.py  storage.py  version.py
reklama_telega/gui/: __init__.py  app.py  logging_utils.py  main_window.py  monitor_runner.py
